Added sections comments to HTML, CSS, JS files

--- a/css/custom-home.css
+++ b/css/custom-home.css
@@ -12,8 +12,24 @@
 /* CUSTOM STYLE FOR SECTIONS */
 /* header */
 
+/* hero */
+
+/* clients */
+
 /* services */
 
+/* about company */
+
+/* hire us */
+
 /* achievements */
+
+/* promo video */
+
+/* testimonials */
+
+/* blog */
+
+/* contacts */
 
 /* footer */
